syntax = "proto3";

// Services
// ********
service YngServices {
    // Users
    rpc UserLogin (UserLogin) returns (UserLogued);
    rpc UsersList (Empty) returns (UserList);
    rpc UserInsert (User) returns (User);
}

// Messages
// ********
message Empty {}

// Users
message User {
  string user = 1;
  string password = 2;
  string email = 3;
}

message UserList {
  repeated User users = 1;
}

message UserLogin {
  string user = 1;
  string password = 2;
}
message UserLogued {
  string user = 1;
  string email = 2;
  string token = 3;
}
